--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -7,7 +7,8 @@
 
   &__content {
     width: 100%;
-    height: 10.8rem;
+    min-height: 10.8rem;
+    padding: 5rem 1.75rem;
     background-color: $color-secondary;
     display: flex;
     flex-direction: column;
