--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
   height: 100vh;
-  max-height: 74.8rem;
+  max-height: 1080px;
   z-index: 9;
   background-color: $color-white;
   position: relative;
